Fix 'lets talk' CYTK logo on small screens. Make menu responsive

--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ ul.navigation li a {
 
 .header {
     background: #136CFB url("images/CYTK-Logomark-Motion3x.png") no-repeat;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 60px;
     padding-right: 60px;
     z-index: 4;
@@ -208,7 +208,9 @@ navigation li a.active {
 }
 
 .header .mdl-layout__header-row {
-    padding-left: 20px;
+    height: auto;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .demo-container {
@@ -560,7 +562,7 @@ navigation li a.active {
 }
 
 .interested-text {
-    margin-top: 130px;
+    margin-top: 85px;
     margin-left: 10%;
     margin-right: auto;
     text-align: left;
@@ -589,6 +591,13 @@ navigation li a.active {
         width: 600px;
         height: 428px;
         /*float: right*/
+    }
+}
+
+@media only screen and (max-width: 1270px) {
+    .value-to-oems .a-vast-market {
+        text-align: left;
+        padding-left: 0;
     }
 }
 
@@ -622,6 +631,9 @@ navigation li a.active {
     }
 
     .cytk-logomark-motion {
+        background: url("images/CYTK-Logomark-Motion-small.png") no-repeat center;
+        width: 280px;
+        height: 281px;
         margin-right: auto;
     }
 
@@ -726,6 +738,7 @@ navigation li a.active {
 
     .value-to-oems .a-vast-market {
         margin-top: 150px;
+        padding-left: 0;
     }
 
     .value-to-oems .value-card {
@@ -759,6 +772,13 @@ navigation li a.active {
         background-image: -moz-linear-gradient(top, white 750px, #EFEFEF 750px, #EFEFEF 100%);
         background-image: -ms-linear-gradient(top, white 750px, #EFEFEF 750px, #EFEFEF 100%);
         background-image: -o-linear-gradient(top, white 750px, #EFEFEF 750px, #EFEFEF 100%);
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    ul.navigation li a {
+        font-size: 8px;
+        margin: 10px 8px;
     }
 }
 
